Fix page moving on tab switch (add scrollbar always)

--- a/frontend/index.css
+++ b/frontend/index.css
@@ -1,6 +1,4 @@
-/*
-* { padding: 0; margin: 0; font-family: monospace; }
-*/
+body { overflow: scroll; }
 * { font-family: monospace; }
 p { margin: 0; }
 
